--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "outDir": "dist/js",
         "target": "ES6",
         "noEmitOnError": true,
-        "noImplicitAny": true
+        "noImplicitAny": true,
+        "removeComments": true, // Remove comments in the compiled code
     },
     "include": [
         "app/**/*"
